# BATMAN

./: LICENSE  README.md
TCR_epitope_database/: TCR_epitope_database.xlsx
pybatman/: pyproject.toml
pybatman/pybatman/: __init.py__  functions.py
pybatman/pybatman/data/AA_matrices/: blosum35.csv  blosum40.csv  blosum45.csv  blosum65.csv  blosum80.csv  blosum85.csv  hamming.csv  pam10.csv  pam140.csv  pam160.csv  pam170.csv  pam190.csv  pam20.csv  pam200.csv  pam210.csv  pam220.csv  pam230.csv  pam240.csv  pam260.csv  pam270.csv  pam290.csv  pam30.csv  pam310.csv  pam330.csv  pam350.csv  pam370.csv  pam380.csv  pam390.csv  pam400.csv  pam410.csv  pam420.csv  pam430.csv  pam440.csv  pam470.csv  pam480.csv  pam60.csv
pybatman_v1.0.1/: LICENSE.txt  README.md  pyproject.toml
pybatman_v1.0.1/pybatman/: functions.py
pybatman_v1.0.1/pybatman/data/AA_matrices/: batman.csv  blosum100.csv  blosum30.csv  blosum50.csv  blosum55.csv  blosum60.csv  blosum62.csv  blosum70.csv  blosum75.csv  blosum90.csv  dayhoff.csv  gonnet.csv  pam100.csv  pam110.csv  pam120.csv  pam130.csv  pam150.csv  pam180.csv  pam250.csv  pam280.csv  pam300.csv  pam320.csv  pam340.csv  pam360.csv  pam40.csv  pam450.csv  pam460.csv  pam490.csv  pam50.csv  pam500.csv  pam70.csv  pam80.csv  pam90.csv
run_batman/: BATMAN_AL.ipynb  active_learning_functions.py  blosum100.csv  pyBATMAN_Tutorial.ipynb  test_input.csv  test_script.py
